[package]
name = "site-builder"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bcs = "0.1.6"
bin-version = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.39.0" }
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
flate2 = "1.0.30"
futures = "0.3.30"
home = "0.5.9"
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.39.0" }
notify = "6.1.1"
regex = "1.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["base64"] }
serde_yaml = "0.9"
shared-crypto = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.39.0" }
sui-keys = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.39.0" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.39.0" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.39.0" }
thiserror = "1.0.61"
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros", "process"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
