[package]
name = "site-builder"
version = "2.4.0"
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
_testing-dry-run = []

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bcs = "0.1.6"
bin-version = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
bytesize = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
flate2 = "1.0.30"
futures = "0.3.30"
glob = "0.3.3"
hex = "0.4.3"
home = "0.5.9"
humantime = "2.2.0"
itertools = "0.14.0"
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
notify = "6.1.1"
prettytable = "0.10.0"
rand = "0.8.5"
regex = "1.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["base64"] }
serde_yaml = "0.9"
shared-crypto = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
sui-keys = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
thiserror = "1.0.61"
tokio = { version = "1.46.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walrus-sdk = { git = "https://github.com/MystenLabs/walrus", tag = "testnet-v1.39.1" }

[dev-dependencies]
gag = "1.0.0"
# Version constraint for transitive dependency compatibility
# (sui-tls -> axum-server v0.6.1 requires hyper <1.8)
hyper = "=1.6.0"
sui-config = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
sui-move-build = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
tempfile = "3.20.0"
test-cluster = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
walrus-service = { git = "https://github.com/MystenLabs/walrus", tag = "testnet-v1.39.1", features = [
    "test-utils",
] }
walrus-test-utils = { git = "https://github.com/MystenLabs/walrus", tag = "testnet-v1.39.1" }

