[package]
name = "site-builder"
version = "2.5.0"
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
_testing-dry-run = []

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bcs = "0.1.6"
bin-version = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
bytesize = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27"
dialoguer = "0.11"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
flate2 = "1.0.30"
futures = "0.3.30"
glob = "0.3.3"
hex = "0.4.3"
home = "0.5.9"
humantime = "2.2.0"
itertools = "0.14.0"
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
notify = "6.1.1"
prettytable = "0.10.0"
rand = "0.8.5"
regex = "1.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["base64"] }
serde_yaml = "0.9"
shared-crypto = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
sui-keys = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
thiserror = "2.0.18"
tokio = { version = "=1.49.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "process",
] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walrus-sdk = { git = "https://github.com/MystenLabs/walrus", rev = "testnet-v1.43.1" }
walrus-sui = { git = "https://github.com/MystenLabs/walrus", rev = "testnet-v1.43.1" }
walrus-utils = { git = "https://github.com/MystenLabs/walrus", rev = "testnet-v1.43.1" }

[dev-dependencies]
gag = "1.0.0"
move-package-alt = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
sui-config = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
sui-move-build = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
tempfile = "3.20.0"
test-cluster = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.66.1" }
walrus-service = { git = "https://github.com/MystenLabs/walrus", rev = "testnet-v1.43.1", features = [
  "test-utils",
] }
walrus-test-utils = { git = "https://github.com/MystenLabs/walrus", rev = "testnet-v1.43.1" }
